--- a/Projeto Academia SENAC/Projeto Academia SENAC.csproj
+++ b/Projeto Academia SENAC/Projeto Academia SENAC.csproj
@@ -92,6 +92,12 @@
     <EmbeddedResource Include="frmCadastro.resx">
       <DependentUpon>frmCadastro.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmCaixa.resx">
+      <DependentUpon>frmCaixa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmControle.resx">
+      <DependentUpon>frmControle.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
     </EmbeddedResource>
@@ -148,6 +154,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MONEY.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GOLDFIT.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GOLDFIT1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
