--- a/Projeto Academia SENAC/Projeto Academia SENAC.csproj
+++ b/Projeto Academia SENAC/Projeto Academia SENAC.csproj
@@ -161,5 +161,8 @@
   <ItemGroup>
     <None Include="Resources\GOLDFIT1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\goldfit__2_-removebg-preview.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
