Ultima alteração em aula

--- a/Projeto Academia SENAC/Projeto Academia SENAC.csproj
+++ b/Projeto Academia SENAC/Projeto Academia SENAC.csproj
@@ -52,6 +52,12 @@
     <Compile Include="frmAgendamentos.Designer.cs">
       <DependentUpon>frmAgendamentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAlunos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAlunos.Designer.cs">
+      <DependentUpon>frmAlunos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCadastro.cs">
       <SubType>Form</SubType>
     </Compile>
